--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -988,7 +988,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="https://proxytechsupport.com/" aria-label="Home">
-        <img src="../../images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
+        <img src="/images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
         <span>Job Support & Proxy</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -1035,6 +1035,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/blog/">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#faq">FAQ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contact</a>
@@ -1157,13 +1160,13 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <h5 class="fw-bold mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="../../#services" class="text-light text-decoration-none">Services</a></li>
-            <li><a href="../../#tech" class="text-light text-decoration-none">Technologies</a></li>
-            <li><a href="../../#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
-            <li><a href="../../#faq" class="text-light text-decoration-none">FAQ</a></li>
-            <li><a href="../../blog/" class="text-light text-decoration-none">Job Support by Technologies</a></li>
-            <li><a href="../../blog/" class="text-light text-decoration-none">Blog</a></li>
-            <li><a href="../../#contact" class="text-light text-decoration-none">Contact</a></li>
+            <li><a href="/#services" class="text-light text-decoration-none">Services</a></li>
+            <li><a href="/#tech" class="text-light text-decoration-none">Technologies</a></li>
+            <li><a href="/#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
+            <li><a href="/#faq" class="text-light text-decoration-none">FAQ</a></li>
+            <li><a href="/blog/" class="text-light text-decoration-none">Blog</a></li>
+            <li><a href="/interviews/" class="text-light text-decoration-none">Interview Questions</a></li>
+            <li><a href="/#contact" class="text-light text-decoration-none">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-4">
