--- a/_layouts/interview-index.html
+++ b/_layouts/interview-index.html
@@ -370,6 +370,9 @@
             <a class="nav-link" href="/blog/">Blog</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/#faq">FAQ</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/#contact">Contact</a>
           </li>
         </ul>
@@ -433,6 +436,8 @@
             <li><a href="/#tech" class="text-light text-decoration-none">Technologies</a></li>
             <li><a href="/#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
             <li><a href="/#faq" class="text-light text-decoration-none">FAQ</a></li>
+            <li><a href="/blog/" class="text-light text-decoration-none">Blog</a></li>
+            <li><a href="/interviews/" class="text-light text-decoration-none">Interview Questions</a></li>
             <li><a href="/#contact" class="text-light text-decoration-none">Contact</a></li>
           </ul>
         </div>
